# IniCRUD

./: README.md  cli_config.py  pyproject.toml  settings.py
task/: Тестовое_задание_для_Py_разработчиков.txt
